Changed active points on graph3

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                                     </ul>
                                 </div>
                                 <div class="contact-detail">
-                                    <h3>Amin Benazzouz, <strong>FRAUDE</strong></h3>
+                                    <h3>Amin Benazzouz</h3>
                                     <ul>
                                         <li><img src="img/github.svg" alt=""><a
                                                 href="https://github.com/AminMMI">Github</a>
