Active points and bars in graph2, added sources to graph 1,2 and 3

--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
         <section class="section section__agression">
             <div class="section__agression-img">
                 <img id="avatar" src="img/avatar.svg" class="visible">
+                <div class="sources">
+                    <p>Sources: </p>
+                        <div class="sources-links">
+                            <a
+                            href="https://www.insee.fr/fr/statistiques/5763559?sommaire=5763633#tableau-figure2_radio1">Agressions sexuelles par âge</a>
+                        </div>
+                </div>
             </div>
 
             <div class="section__agression-text">
@@ -100,6 +107,14 @@
                 <div class="section__victime-graph">
                     <canvas id="graph2">
                     </canvas>
+                    <div class="sources">
+                        <p>Sources: </p>
+                            <div class="sources-links">
+                                <a
+                                href="https://www.vie-publique.fr/en-bref/293304-violences-sexuelles-envers-les-femmes-les-statistiques-pour-2023">Nombre de victimes d’agressions sexuelles - Source 1</a>
+                                <a href="https://egalactu.com/bilan-du-ssmsi-les-plaintes-pour-violences-sexuelles-sont-en-hausse-en-2021/">Nombre de victimes d’agressions sexuelles - Source 2</a>
+                            </div>
+                    </div>
                 </div>
 
                 <div class="section__victime-info" id="section__victime-info">
@@ -112,8 +127,8 @@
         <section class="section section__condamnation">
             <div class="section__condamnation-titre-button">
                 <div class="section__condamnation-titre">
-                    <h2><span class="white">ÉVOLUTION DU NOMBRE DE</span> PLAINTES <span class="white">ET</span> DE
-                        CONDAMNATIONS</h2>
+                    <h2><span class="white">ÉVOLUTION DU NOMBRE DE</span> PLAINTES <span class="white">ET DE</span> 
+                        CONDAMNATIONS <span class="white">POUR VIOL</span></h2>
                     <p>Cliquez sur les points</p>
                 </div>
                 <div class="section__condamnation-button">
@@ -130,7 +145,16 @@
                 <div class="section__condamnation-graph">
                     <div id="custom-legend"></div>
                     <canvas id="graph3" class="visible"></canvas>
-                    <canvas id="graphBar" class="hidden"></anvas>
+                    <canvas id="graphBar" class="hidden"></canvas>
+                    <div class="sources">
+                        <p>Sources: </p>
+                            <div class="sources-links">
+                                <a
+                                href="https://fr.statista.com/statistiques/953012/condamnations-pour-viol-france/">Nombre
+                                de condamnations</a>
+                                <a href="https://visustat.fr/donnees/nationales/justice/evolution-des-violences-sexuelles-en-france/">Nombre de plaintes</a>
+                            </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -261,16 +285,19 @@
                             <section>
                                 <h3>Sources</h3>
                                 <ul>
-                                    <li><strong>Premier graphique :</strong> <a
+                                    <li><strong>Premier graphique :</strong> <br> <a
                                             href="https://www.insee.fr/fr/statistiques/5763559?sommaire=5763633#tableau-figure2_radio1">Viols
-                                            et agressions sexuelles hors cadre familial</a></li>
-                                    <li><strong>Deuxième graphique :</strong> <a
-                                            href="https://visustat.fr/donnees/nationales/justice/evolution-des-violences-sexuelles-en-france/">Évolution
-                                            du nombre de victimes d’agressions sexuelles</a></li>
-                                    <li><strong>Troisième graphique :</strong> <a
-                                            href="https://visustat.fr/donnees/nationales/justice/evolution-des-violences-sexuelles-en-france/">Nombre
-                                            de plaintes et de condamnations</a></li>
-                                    <li><strong>Quatrième graphique :</strong> <a
+                                            et agressions sexuelles hors cadre familial</a></li> <br>
+                                    <li><strong>Deuxième graphique :</strong> <br> <a
+                                            href="https://www.vie-publique.fr/en-bref/293304-violences-sexuelles-envers-les-femmes-les-statistiques-pour-2023">Nombre de victimes d’agressions sexuelles - Source 1</a> <br>
+                                            <a href="https://egalactu.com/bilan-du-ssmsi-les-plaintes-pour-violences-sexuelles-sont-en-hausse-en-2021/">Nombre de victimes d’agressions sexuelles - Source 2</a>
+                                        </li> <br>
+                                    <li><strong>Troisième graphique :</strong> <br> <a
+                                            href="https://fr.statista.com/statistiques/953012/condamnations-pour-viol-france/">Nombre
+                                            de condamnations</a> <br> 
+                                            <a href="https://visustat.fr/donnees/nationales/justice/evolution-des-violences-sexuelles-en-france/">Nombre de plaintes</a>
+                                        </li> <br>
+                                    <li><strong>Quatrième graphique :</strong> <br> <a
                                             href="https://www.linternaute.com/actualite/delinquance/classement/regions/agression-sexuelle">Agressions
                                             sexuelles par régions</a></li>
                                 </ul>
