Removed double sources in graphs and fixed aligns

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <section class="section section__agression">
             <div class="section__agression-img">
-                <img id="avatar" src="img/avatar.svg" class="visible">
+                <img id="avatar" src="img/avatar.png" class="visible">
                 <div class="sources">
                     <p>Sources: </p>
                         <div class="sources-links">
@@ -89,7 +89,6 @@
                 <div id="dynamic-info" class="section__agression-info hidden">
                     <h3 id="info-percentage"></h3>
                     <p id="info-text"></p>
-                    <a id="info-source" href="#" target="_blank">Cliquez sur le lien</a>
                 </div>
             </div>
 
@@ -171,6 +170,14 @@
                     <div class="section__carte-info">
                         <div class="section__carte-info-action"></div>
                     </div>
+                </div>
+                <div class="sources">
+                    <p>Source: </p>
+                        <div class="sources-links">
+                            <a
+                            href="https://www.linternaute.com/actualite/delinquance/classement/regions/agression-sexuelle">Agressions sexuelles par région</a>
+                            <a href="https://www.linternaute.com/actualite/delinquance/classement/departements/agression-sexuelle">Agressions sexuelles par département</a>
+                        </div>
                 </div>
             </div>
             <div id="tooltip"
