Changed links color in footer modal windows

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <h2><span class="white">Les</span> agressions<br> sexuelles</h2>
                 <p id="texte" class="visible">Passer votre souris sur les tranches<br> d'âge pour en savoir plus</p>
                 <div id="dynamic-info" class="section__agression-info hidden">
-                    <h3 id="info-percentage"></h3>
+                    <p id="info-percentage"></p>
                     <p id="info-text"></p>
                 </div>
             </div>
